2015-03-11  Larus  <larus@icdhcp-1-044.epfl.ch>

	* QtSpim/datawin.cpp (formatPartialQuadWord) [https://sourceforge.net/p/spimsimulator/bugs/61/]:
	Problem printing partial word at end of memory space.

	* CPU/scanner.l:
	Change of 2/18 made a number followed by a comma and space
	ambiguous. Now FP numbers must have a digit following decimal
	point (decimal comma).

2015-02-18  Larus  <larus@ubuntu>

	* QtSpim/regwin.cpp, QtSpim/datawin.cpp [https://sourceforge.net/p/spimsimulator/bugs/60/]
	Setting register and memory contents in QtSpim did not allow
	negative hex numbers (0xf....).

2015-02-18  Larus  <larus@icdhcp-1-196.epfl.ch>

	* spim/spim.c (top_level):
	Fixed spim's handling of stdin to allow it to read commands from
	redirected input.

	* CPU/scanner.l:
	Allow comma (,) and apostraphe (') as decimal separator in
	floating point numbers.

	* QtSpim/menu.cpp (help_ViewHelp):
	Fix Mac help.

2015-02-17  Larus  <larus@icdhcp-1-196.epfl.ch>

	* QtSpim/textwin.cpp (DisplayTextSegments):
	Force redisplay of text segment when font changes.

	* QtSpim/console.cpp (WriteOutput) [https://sourceforge.net/p/spimsimulator/patches/3/]:
	Ensure console output stays visible.

2015-02-17    <larus@IC-LMC-ICDO-01>

	* CPU/syscall.c (myInvalidParameterHandler) [https://sourceforge.net/p/spimsimulator/bugs/46/]:
	Bad parameter to system call invoked Windows Error Reporting and
	crashed spim. Instead, report error in spim.

2014-08-21  Larus  <larus@Jim-MacBook-Air.local>

	* Documentation/SourceForge/index.html:
	Update links to Qt source.

2014-05-31  Larus  <larus@Jim-MacBook-Air.local>

	* spim/spim.c [Jorge Garcia Aguilar <jorgegarag@gmail.com>]:
	Add -dump and -full_dump flags to write data and text segments
	to a file.

2014-02-02  Larus  <larus@Jim-MacBook-Air.local>

	* Setup/QtSpim_Mac_Deployment/QtSpim_Mac_pkproj:
	Fixed Mac install to include instructions how to work around
	Gatekeeper rejection of unsigned apps.

2014-01-26  Larus  <larus@Jim-MacBook-Air.local>
